--- a/web/modules/custom/js_message/config/install/js_message.settings.yml
+++ b/web/modules/custom/js_message/config/install/js_message.settings.yml
@@ -1,5 +1,5 @@
 form:
-  title_form: 'Информация'
+  title_form: 'Information'
   background_color: '#ffffff'
   background_color_head: '#cccccc'
   width: 320
