code in accordance with code standard drupal

--- a/web/modules/custom/custom_note/custom_note.routing.yml
+++ b/web/modules/custom/custom_note/custom_note.routing.yml
@@ -1,7 +1,7 @@
 setting.note.form:
   path: '/update_note'
   defaults:
-    _title: 'Пакетное изменение нод Note'
+    _title: 'Packet changes nodes Note'
     _form: '\Drupal\custom_note\Form\UpdateForm'
   requirements:
     _permission: 'admin block'
