--- a/web/modules/custom/js_message/js_message.info.yml
+++ b/web/modules/custom/js_message/js_message.info.yml
@@ -4,3 +4,7 @@ description: 'Add new custom modal window for system information'
 package: Add Custom
 version: VERSION
 core: 8.x
+
+dependencies:
+  - core/jquery
+  - core/jquery.once
