--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -1,4 +1,7 @@
 module:
+  admin_toolbar: 0
+  admin_toolbar_links_access_filter: 0
+  admin_toolbar_tools: 0
   automated_cron: 0
   block: 0
   block_content: 0
@@ -9,9 +12,11 @@ module:
   config: 0
   contact: 0
   contextual: 0
+  date_popup_timepicker: 0
   datetime: 0
   dblog: 0
   devel: 0
+  devel_generate: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -31,6 +36,7 @@ module:
   rdf: 0
   search: 0
   shortcut: 0
+  single_datetime: 0
   system: 0
   taxonomy: 0
   text: 0
