module moved drupal 7 to drupal 8

--- a/web/modules/custom/date_popup_timepicker/date_popup_timepicker.libraries.yml
+++ b/web/modules/custom/date_popup_timepicker/date_popup_timepicker.libraries.yml
@@ -3,6 +3,7 @@ timepicker:
   css:
     theme:
       css/jquery.ui.timepicker.css: {}
+      css/custom.style.picker.css: {}
   js:
     js/date_popup_timepicker.timepicker.js: {}
     js/jquery.ui.timepicker.js: {}
